[workspace]
members = [
    "springtime-di",
    "springtime-di-derive",
    "springtime",
    "springtime-web-axum",
    "springtime-web-axum-derive",
]

[workspace.package]
authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>"]
edition = "2021"
repository = "https://github.com/krojew/springtime"
license = "MIT"
