[package]
name = "springtime-di-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Derive support for springtime-di crate."
documentation = "https://docs.rs/springtime-di"
repository.workspace = true
license.workspace = true
keywords = ["di", "dependency-injection", "ioc", "injection", "spring", "derive"]
rust-version = "1.65"
readme = "README.md"

[lib]
proc-macro = true

[features]
threadsafe = []
default = ["threadsafe"]

[dependencies]
convert_case = "0.6.0"
itertools = "0.10.5"
proc-macro2 = "1.0.52"
syn = { version = "2.0.2", features = ["full"] }
quote = "1.0.26"
