[package]
name = "springtime-di-derive"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "Derive support for springtime-di crate."
documentation = "https://docs.rs/springtime-di"
repository.workspace = true
license.workspace = true
keywords = ["di", "dependency-injection", "ioc", "injection", "derive"]
rust-version = "1.65"
readme = "README.md"

[lib]
proc-macro = true

[features]
async = []
threadsafe = []
default = ["threadsafe"]

[dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
proc-macro2 = "1.0.70"
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"
