[package]
name = "springtime-di"
version = "1.0.4"
edition.workspace = true
authors.workspace = true
rust-version = "1.62"
description = "Dependency injection framework based on automatic component discovery and runtime autowiring."
documentation = "https://docs.rs/springtime-di"
repository.workspace = true
license.workspace = true
keywords = ["di", "dependency-injection", "ioc", "injection", "spring"]
readme = "README.md"
categories = ["asynchronous"]

[features]
async = ["futures", "springtime-di-derive/async"]
threadsafe = ["springtime-di-derive/threadsafe"]
derive = ["springtime-di-derive"]
default = ["threadsafe", "derive"]

[dependencies]
derive_more = { version = "2.0.1", features = ["debug"] }
futures = { version = "0.3.29", optional = true }
inventory = "0.3.13"
itertools = "0.14.0"
rustc-hash = "2.1.1"
springtime-di-derive = { path = "../springtime-di-derive", version = "0.3", optional = true, default-features = false }
thiserror = "2.0.3"
tracing = "0.1.40"

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.34.0", features = ["full"] }

[[example]]
name = "09-async"
required-features = ["async"]
