[package]
name = "springtime-migrate-refinery"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "SQL migration framework based on dependency injection."
documentation = "https://docs.rs/springtime-migrate-refinery"
repository.workspace = true
license.workspace = true
keywords = ["sql", "di", "spring", "framework", "migrations"]
readme = "README.md"

[features]
default = []
mysql_async = ["refinery-core/mysql_async"]
tiberius = ["refinery-core/tiberius"]
tokio-postgres = ["refinery-core/tokio-postgres"]

[dependencies]
refinery-core = { version = "0.8.7", default-features = false }
