[package]
name = "springtime-migrate-refinery"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "SQL migration framework based on dependency injection."
documentation = "https://docs.rs/springtime-migrate-refinery"
repository.workspace = true
license.workspace = true
keywords = ["sql", "di", "spring", "framework", "migrations"]
readme = "README.md"

[features]
default = []
mysql_async = ["refinery-core/mysql_async"]
tiberius = ["refinery-core/tiberius"]
tokio-postgres = ["refinery-core/tokio-postgres"]

[dependencies]
itertools = "0.10.5"
refinery-core = { version = "0.8.7", default-features = false }
springtime = { version = "0.3.0", path = "../springtime" }
springtime-di = { version = "0.3.2", path = "../springtime-di" }
springtime-migrate-refinery-macros = { version = "0.1.0", path = "../springtime-migrate-refinery-macros" }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
