[package]
name = "springtime-migrate-refinery"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "SQL migration framework based on dependency injection."
documentation = "https://docs.rs/springtime-migrate-refinery"
repository.workspace = true
license.workspace = true
keywords = ["sql", "di", "spring", "framework", "migrations"]
readme = "README.md"
categories = ["asynchronous", "database"]

[features]
default = []
mysql_async = ["refinery-core/mysql_async"]
rusqlite-bundled = ["refinery-core/rusqlite-bundled"]
tiberius = ["refinery-core/tiberius"]
tiberius-config = ["refinery-core/tiberius-config"]
tokio-postgres = ["refinery-core/tokio-postgres"]

[dependencies]
config = "0.13.3"
itertools = "0.10.5"
refinery-core = { version = ">=0.8.9", default-features = false }
serde = "1.0.160"
springtime = { version = "1.0.0", path = "../springtime" }
springtime-di = { version = "1.0.0", path = "../springtime-di" }
springtime-migrate-refinery-macros = { version = "0.1.0", path = "../springtime-migrate-refinery-macros" }
tracing = "0.1.37"

[dev-dependencies]
mockall = "0.11.4"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
