[package]
name = "springtime-web-axum"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
description = "Web framework based on Springtime and axum."
documentation = "https://docs.rs/springtime-web-axum"
repository.workspace = true
license.workspace = true
keywords = ["web", "http", "spring", "framework", "axum"]
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[features]
default = ["derive"]
derive = ["springtime-web-axum-derive"]

[dependencies]
axum = "0.6.15"
config = "0.13.3"
downcast = "0.11.0"
futures = "0.3.28"
fxhash = "0.2.1"
hyper = "0.14.26"
serde = "1.0.160"
springtime = { version = "1.0.0", path = "../springtime" }
springtime-di = { version = "1.0.0", path = "../springtime-di", features = ["async"] }
springtime-web-axum-derive = { version = "0.1.0", path = "../springtime-web-axum-derive", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"

[dev-dependencies]
mockall = "0.11.4"
once_cell = "1.17.1"
portpicker = "0.1.1"
reqwest = "0.11.16"
tower-http = { version = "0.4.0", features = ["validate-request", "compression-gzip", "auth"] }
