[package]
name = "springtime-web-axum"
version = "2.0.1"
edition.workspace = true
authors.workspace = true
description = "Web framework based on Springtime and axum."
documentation = "https://docs.rs/springtime-web-axum"
repository.workspace = true
license.workspace = true
keywords = ["web", "http", "spring", "framework", "axum"]
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[features]
default = ["derive"]
derive = ["springtime-web-axum-derive"]

[dependencies]
axum = "0.7.1"
config = "0.14.0"
downcast = "0.11.0"
futures = "0.3.29"
fxhash = "0.2.1"
serde = "1.0.193"
springtime = { version = "1.0.0", path = "../springtime" }
springtime-di = { version = "1.0.0", path = "../springtime-di", features = ["async"] }
springtime-web-axum-derive = { version = "0.1.0", path = "../springtime-web-axum-derive", optional = true }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
mockall = "0.13.0"
once_cell = "1.18.0"
portpicker = "0.1.1"
reqwest = "0.12.4"
tower-http = { version = "0.5.0", features = ["validate-request", "compression-gzip", "auth"] }
