[package]
name = "springtime-web-axum"
version = "3.0.1"
edition.workspace = true
authors.workspace = true
description = "Web framework based on Springtime and axum."
documentation = "https://docs.rs/springtime-web-axum"
repository.workspace = true
license.workspace = true
keywords = ["web", "http", "spring", "framework", "axum"]
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[features]
default = ["derive"]
derive = ["springtime-web-axum-derive"]

[dependencies]
axum = "0.8.1"
config = "0.15.5"
downcast = "0.11.0"
futures = "0.3.31"
rustc-hash = "2.1.1"
serde = "1.0.217"
springtime = { version = "1.0.0", path = "../springtime" }
springtime-di = { version = "1.0.0", path = "../springtime-di", features = ["async"] }
springtime-web-axum-derive = { version = "0.1.0", path = "../springtime-web-axum-derive", optional = true }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
mockall = "0.14.0"
once_cell = "1.20.2"
portpicker = "0.1.1"
reqwest = "0.12.12"
tower-http = { version = "0.6.2", features = ["validate-request", "compression-gzip", "auth"] }
