[package]
name = "springtime"
version = "1.0.3"
edition.workspace = true
authors.workspace = true
description = "Dependency injection based application bootstrapping and execution crate."
documentation = "https://docs.rs/springtime"
repository.workspace = true
license.workspace = true
keywords = ["di", "dependency-injection", "spring", "framework"]
readme = "README.md"
categories = ["web-programming", "asynchronous"]

[features]
async = ["springtime-di/async", "threadsafe", "futures"]
default = ["async"]
threadsafe = ["springtime-di/threadsafe"]

[dependencies]
config = "0.14.0"
derive_more = { version = "1.0.0", features = ["constructor"] }
futures = { version = "0.3.29", optional = true }
serde = "1.0.159"
springtime-di = { version = "1.0.0", path = "../springtime-di", default-features = false, features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.34.0", features = ["full"], optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }

[[example]]
name = "00-basic-app"
required-features = ["async"]

[[example]]
name = "01-config"
required-features = ["async"]

[[example]]
name = "02-priorities"
required-features = ["async"]
